[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Request_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Report_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/File_text-export.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Morning-export.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Documents/Documents_screen.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Return_button-export.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Main/Report_screen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Main/Request_screen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Settings/Settings_screen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Documents/Julie/Julie_screen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Documents/Anna/Anna_screen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Documents/Joseph/Joseph_screen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Documents/Jen/Jen_screen.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Documents/Castellan/Castellan_screen.tscn" type="PackedScene" id=15]

[node name="Documents_screen" type="Control" groups=[
"update_font",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
Report = ExtResource( 8 )
Get_info = ExtResource( 9 )
Settings = ExtResource( 10 )
Julie = ExtResource( 11 )
Anna = ExtResource( 12 )
Jen = ExtResource( 14 )
Joseph = ExtResource( 13 )
Castellan = ExtResource( 15 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Julie" type="TextureButton" parent="Buttons"]
margin_left = 176.0
margin_top = 264.0
margin_right = 272.0
margin_bottom = 360.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anna" type="TextureButton" parent="Buttons"]
margin_left = 452.208
margin_top = 264.794
margin_right = 548.208
margin_bottom = 360.794
rect_pivot_offset = Vector2( 403.792, 111.206 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jen" type="TextureButton" parent="Buttons"]
margin_left = 739.527
margin_top = 264.0
margin_right = 835.527
margin_bottom = 360.0
rect_pivot_offset = Vector2( 116.473, 104.857 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joseph" type="TextureButton" parent="Buttons"]
margin_left = 288.0
margin_top = 408.0
margin_right = 384.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 403.792, 111.206 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castellan" type="TextureButton" parent="Buttons"]
margin_left = 575.319
margin_top = 414.349
margin_right = 671.319
margin_bottom = 510.349
rect_pivot_offset = Vector2( 116.473, 104.857 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="TextureButton" parent="Buttons"]
margin_left = 856.0
margin_top = 24.0
margin_right = 952.0
margin_bottom = 120.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Buttons"]
margin_left = 816.0
margin_top = 552.0
margin_right = 944.0
margin_bottom = 594.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Julie_label" type="Label" parent="Buttons"]
margin_left = 184.0
margin_top = 360.0
margin_right = 241.0
margin_bottom = 374.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JULIE"
align = 1
valign = 1

[node name="Anna_label" type="Label" parent="Buttons"]
margin_left = 472.0
margin_top = 360.0
margin_right = 512.0
margin_bottom = 374.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "ANNA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jen_label" type="Label" parent="Buttons"]
margin_left = 736.0
margin_top = 360.857
margin_right = 818.0
margin_bottom = 374.857
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JEN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joseph_label" type="Label" parent="Buttons"]
margin_left = 296.0
margin_top = 504.0
margin_right = 342.0
margin_bottom = 518.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "JOSEPH"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Castellan_label" type="Label" parent="Buttons"]
margin_left = 576.0
margin_top = 512.0
margin_right = 658.0
margin_bottom = 526.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "CASTELLAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_label" type="Label" parent="Buttons"]
margin_left = 824.0
margin_top = 560.0
margin_right = 936.0
margin_bottom = 584.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 50.5, 50.5 )
texture = ExtResource( 5 )

[node name="Current_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DAY 1: MORNING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 72.0
margin_right = 224.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "30S UNTIL NOON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_functions" type="Node" parent="."]

[node name="Report" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 120.0
margin_right = 80.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report_label" type="Label" parent="Main_functions"]
margin_left = 480.0
margin_top = 56.0
margin_right = 529.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REPORT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_label" type="Label" parent="Main_functions"]
margin_left = 352.0
margin_top = 136.0
margin_right = 656.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST INFORMATION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress" type="Label" parent="."]
margin_left = 360.0
margin_top = 544.0
margin_right = 656.0
margin_bottom = 558.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST PROGRESS:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress_2" type="Label" parent="Request_progress"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "0%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Julie" to="." method="_on_Julie_pressed"]
[connection signal="pressed" from="Buttons/Anna" to="." method="_on_Anna_pressed"]
[connection signal="pressed" from="Buttons/Jen" to="." method="_on_Jen_pressed"]
[connection signal="pressed" from="Buttons/Joseph" to="." method="_on_Joseph_pressed"]
[connection signal="pressed" from="Buttons/Castellan" to="." method="_on_Castellan_pressed"]
[connection signal="pressed" from="Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main_functions/Report" to="." method="_on_Report_pressed"]
[connection signal="pressed" from="Main_functions/Request" to="." method="_on_Request_pressed"]
